--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -17,7 +17,7 @@
     -webkit-text-fill-color: transparent;
     font-size: 1.4rem;
     font-weight: bold;
-    font: 600 0.8125rem/1.6 Inconsolata,verdana,sans-serif;
+    font: 600 1.2rem Inconsolata,verdana,sans-serif;
     color: #021425;
     letter-spacing: 1px;
     text-transform: uppercase;
