--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -3,7 +3,7 @@
     max-height: max-content;
     margin-bottom: 1rem;
     display: flex;
-    overflow-x: scroll;
+    //overflow-x: scroll;
     max-width: 700px;
     margin: 0 auto;
     .info{
@@ -50,134 +50,4 @@
         }
     }
 }
-/* width */
-.container::-webkit-scrollbar {
-    width: 0px;
-    height: 0px;
-}
 
-$color1 : var(--color1);
-
-.card{
-    border-radius: 20px;
-    overflow: hidden;
-    position: relative;   
-    width: 40vw;
-    min-width: 230px;
-    max-width: 230px;
-    height: calc( 40vw * 4 / 3);
-    min-height: calc(300px * 5 /5);
-    max-height: calc(300px );
-    margin: 5px;
-    background-color: #000;
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
-    .cat{
-        position: absolute;
-        top: 1rem;
-        left: 1rem;
-        font-size: 2rem;
-        padding: 0 1rem;
-        border-radius: 10px;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
-    .cat {
-        color: #fff;
-        font-weight: 900;
-        text-shadow: 
-            -0.0075em 0.0075em 0 mix(#000, blue, 94%),
-            0.005em 0.005em 0 mix(#000, blue, 60%),
-            0.01em 0.01em 0 mix(#000, blue, 62%), 
-            0.015em 0.015em mix(#000, blue, 64%), 
-            0.02em 0.02em 0 mix(#000, blue, 66%), 
-            0.025em 0.025em 0 mix(#000, blue, 68%),
-            0.03em 0.03em 0 mix(#000, blue, 70%),
-            0.035em 0.035em 0 mix(#000, blue, 72%);
-    }
-    
-    
-    .calc{
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 60%;
-        display: flex;
-        justify-content: center;
-        align-items: flex-end;
-        background-image: url("./calc.png");
-        .button{
-            background-color: #fff;
-            width: 100%;
-            margin: 1rem;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            padding: 5px 0px;
-            border-radius: 10px;
-        }
-        .tag{
-            color: #fff;
-            font-weight: bold;
-        }
-        .tag {
-            text-transform: Uppercase;
-            font-family: 'Rubik', sans-serif;
-            font-size: 5rem;
-            color: #E4E5E6; 
-            @media (max-width: 500px) {
-                font-size: 3rem;
-            }
-        }
-            
-        .tag {
-            position: relative;
-            background: linear-gradient(to right, var(--color1), var(--color2), var(--color3));
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent; 
-        }
-            
-        .tag:before,.tag:after {
-            content: attr(data-text);
-            position: absolute;
-            top: 0;
-            left: 0; 
-        }
-            
-        .tag:before {
-            z-index: -1;
-            text-shadow: -0.001em -0.001em 1px rgba(255,255,255,.15)
-        }
-            
-        .tag:after {
-            z-index: -2;
-            text-shadow: 10px 10px 10px rgba(0,0,0,.5), 20px 20px 20px rgba(0,0,0,.4), 30px 30px 30px rgba(0,0,0,.1);
-            mix-blend-mode: multiply; 
-        }
-            
-    }
-}
-// .list{
-//     display: flex;
-//     margin: 1rem;
-//     margin-bottom: 2rem;
-//     .outerCorner{
-//         border: 3px dotted #ccc;
-//         border-radius: 50%;
-//         margin-right: 1rem;
-//         .innerConner{
-//             margin: 5px;
-//             border: 2px solid #ccc;
-//             width: 20vw;
-//             height: 20vw;
-//             border-radius: 50%;
-//             max-width: 70px;
-//             max-height: 70px;
-//             background-size: cover;
-//         }
-//     }
-// }
