--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -9,52 +9,72 @@
         background-color: transparent;
         border: none;
         outline: none;
+        padding: 1px 6px;
     }
-    svg{
-        margin: 1px 6px !important;
-    }
-    .info{
-        max-width: 300px;
-        margin-top: 20px;
-        bottom: auto;
-        left: auto;
-        transform: none;
-        margin-left: auto;
-        margin-right: auto;
-        .cat{
-            line-height: 1.11111;
-            font-family: Crimson Text,times,serif;
-            font-weight: 600;
-            font-size: 2rem;
-            color: #021425;
+    .box{
+        margin: 5px;
+        display: flex;
+        align-items: center;
+        background-color: #fff;
+        border-radius: 5px;
+        box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
+        .img{
+            width: 40vw;
+            margin: .5rem;
+            border-radius: 10px;
+            overflow: hidden;
+            margin-right: .5rem;
+        }
+
+        .info{
+            width: 60vw;
+            max-width: 300px;
+            margin-top: 20px;
+            bottom: auto;
+            left: auto;
+            transform: none;
             display: flex;
-            justify-content: center;
-            align-items: center;
-        }
-        p{
-            text-align: center;
-            color: #021425;
-            font-size: 1rem;
-            line-height: 1.11111;
-            opacity: .85;
-            font: 400 0.9375rem/1.42857 Crimson Text,times,serif;
-            letter-spacing: normal;
-            padding-top: 0.5rem;
-            margin-right: auto;
-            margin-left: auto;
-            margin-bottom: 1.5rem;
-        }
-        .link{
-            border: 1px solid #021425;
-            color: #021425;
-            font: 400 1rem/1.11111 Inconsolata,verdana,sans-serif;
-            text-transform: uppercase;
-            padding: 10px 15px;
-            opacity: .85;
-            cursor: pointer;
-            width: max-content;
-            margin: 0 auto;
+            flex-direction: column;
+            align-items: flex-start;
+            margin: 1rem;
+            margin-left: 0px;
+            .cat{
+                line-height: 1.11111;
+                font-family: Crimson Text,times,serif;
+                font-weight: 600;
+                font-size: 1rem;
+                color: #021425;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                
+            }
+            p{
+                color: #021425;
+                font-size: 1rem;
+                line-height: 1.11111;
+                opacity: .85;
+                font: 400  Crimson Text,times,serif;
+                letter-spacing: normal;
+                //padding-top: 0.5rem;
+                //margin-bottom: 1.5rem;
+                display: -webkit-box;
+                -webkit-line-clamp: 1; /*No of lines after which the ellipsis needs to be added*/
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+            .link{
+                //border: 1px solid #021425;
+                color: #021425;
+                font: 400 1rem/1.11111 Inconsolata,verdana,sans-serif;
+                text-transform: uppercase;
+                //padding: 10px 15px;
+                opacity: .85;
+                cursor: pointer;
+                width: max-content;
+            }
         }
     }
+    
 }
 
