--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -37,8 +37,11 @@
             align-items: flex-start;
             margin: 1rem;
             margin-left: 0px;
+            font-family: Montserrat, arial, sans-serif;
             .cat{
                 line-height: 1.11111;
+                margin: 0;
+                margin-bottom: .5rem;
                 font-family: Crimson Text,times,serif;
                 font-weight: 600;
                 font-size: 1rem;
