--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -14,7 +14,7 @@
     .box{
         margin: 5px;
         display: flex;
-        align-items: center;
+        //align-items: center;
         background-color: #fff;
         border-radius: 15px;
         box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(243, 243, 243, 0.9529411765) 0px 0px 0px 1px;
@@ -38,7 +38,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            margin: 1rem;
+            margin: .5rem;
             margin-left: 0px;
             font-family: Montserrat, arial, sans-serif;
             .cat{
@@ -64,7 +64,7 @@
                 //padding-top: 0.5rem;
                 //margin-bottom: 1.5rem;
                 display: -webkit-box;
-                -webkit-line-clamp: 3; /*No of lines after which the ellipsis needs to be added*/
+                -webkit-line-clamp: 4; /*No of lines after which the ellipsis needs to be added*/
                 -webkit-box-orient: vertical;
                 overflow: hidden;
                 margin: 0;
