--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -1,5 +1,5 @@
 .header{
-    height: 50px;
+    height: 60px;
     //background-color: greenyellow;
     width: 100%;
     display: flex;
@@ -13,9 +13,18 @@
         display: flex;
         justify-content: space-between;
         .button{
-            font-size: 2rem;
+            font-size: 1.5rem;
             margin-left: 1rem;
             cursor: pointer;
+            color: #253b56;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            .text{
+                font-size: .5rem;
+                font-weight: bold;
+                margin-top: - .3rem;
+            }
         }
         .content{
             width: 100%;
