--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -13,15 +13,17 @@
         display: flex;
         justify-content: space-between;
         .button{
-            font-size: 1.5rem;
+            font-size: 1.7rem;
             margin-left: 1rem;
             cursor: pointer;
             color: #253b56;
             display: flex;
             flex-direction: column;
             justify-content: center;
+            align-items: center;
+            font-weight: bold;
             .text{
-                font-size: .5rem;
+                font-size: .7rem;
                 font-weight: bold;
                 margin-top: - .3rem;
             }
