--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -6,6 +6,8 @@
     justify-content: space-between;
     border-bottom: 1px solid #f3f3f3f3;
     position: fixed;
+    top: 0;
+    left: 0;
     z-index: 10;
     background-color: #fff;
     .head{
