--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -1,10 +1,9 @@
 .container{
-    width: calc( 100vw - 10px );
     max-height: max-content;
-    margin-bottom: 1rem;
     //overflow-x: scroll;
     max-width: 700px;
-    margin: 0 auto;
+    margin: 60px auto;
+    margin-bottom: 0;
     button{
         background-color: transparent;
         border: none;
