--- a/components/Menu/index.module.scss
+++ b/components/Menu/index.module.scss
@@ -60,6 +60,7 @@
         background-color: rgba(0,0,0,0.5);
         width: 100vw;
         height: 100vh;
+        position: absolute;
         .side{
             display: none;
             position: fixed;
