--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,7 +6,6 @@
   flex: 1;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   max-width: 700px;
   margin: 0 auto;
@@ -114,6 +113,10 @@
     }
   }
 
+}
+.mTop{
+  margin: 70px auto;
+  margin-bottom: 0;
 }
 
 .footer {
