--- a/components/StoriesWidget/index.module.scss
+++ b/components/StoriesWidget/index.module.scss
@@ -11,7 +11,7 @@
         padding: 1px 6px;
     }
     .box{
-        margin: 5px;
+        margin: .5rem;
         display: flex;
         align-items: center;
         background-color: #fff;
@@ -53,7 +53,7 @@
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            margin: .5rem auto;
+            margin: 0rem auto;
             font-family: Montserrat, arial, sans-serif;
             .cat{
                 line-height: 1.11111;
@@ -83,9 +83,11 @@
                 overflow: hidden;
                 margin: 0;
             }
+            
             .link{
+                margin-top: .5rem;
+                color: rgb(30, 30, 201);
                 //border: 1px solid #021425;
-                color: #021425;
                 font: 400 1rem/1.11111 Inconsolata,verdana,sans-serif;
                 text-transform: uppercase;
                 //padding: 10px 15px;
@@ -93,6 +95,7 @@
                 cursor: pointer;
                 width: max-content;
             }
+            
         }
     }
     
